--- a/style/index.css
+++ b/style/index.css
@@ -1,16 +1,11 @@
-/*geral config*/
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/*body config*/
-body {
-    font-family: 'Inknut Antiqua', serif;
-    color: white;
+/*body*/
+body{
+    font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
 }
-
-
-
